--- a/less/alerts.less
+++ b/less/alerts.less
@@ -3,14 +3,16 @@
 
 // Base alert styles
 .alert {
-  padding: 8px 35px 8px 14px;
-  margin-bottom: @baseLineHeight;
-  text-shadow: 0 1px 0 rgba(255,255,255,.5);
-  background-color: @warningBackground;
-  border: 1px solid @warningBorder;
-  .border-radius(4px);
-  color: @warningText;
-}
+	  padding: 8px 35px 8px 14px;
+	  margin-bottom: @baseLineHeight;
+	  text-shadow: 0 1px 0 rgba(255,255,255,.5);
+	  .border-radius(4px);
+  .alert-warning {
+      background-color: @warningBackground;
+      border: 1px solid @warningBorder;
+      color: @warningText;
+  }
+ }
 .alert-heading {
   color: inherit;
 }
