Alerts can be centered using alert-center

--- a/less/alerts.less
+++ b/less/alerts.less
@@ -17,6 +17,10 @@
   color: inherit;
 }
 
+.alert-center {
+	text-align: center;
+}
+
 // Adjust close link position
 .alert .close {
   position: relative;
@@ -27,7 +31,6 @@
 
 // Alternate styles
 // ----------------
-
 .alert-success {
   background-color: @successBackground;
   border-color: @successBorder;  
