Text can be added inside btn-group

--- a/less/button-groups.less
+++ b/less/button-groups.less
@@ -46,6 +46,16 @@
   margin-left: -1px;
   .border-radius(0);
 }
+
+// Float them, remove border radius, then re-add to first and last elements
+.btn-group input,
+.btn-group select,
+.btn-group .text
+{
+  position: relative;
+  float: left;
+}
+
 // Set corners individual because sometimes a single button can be in a .btn-group and we need :first-child and :last-child to both match
 .btn-group .btn:first-child {
   margin-left: 0;
