--- a/less/button-groups.less
+++ b/less/button-groups.less
@@ -22,6 +22,12 @@
     display: inline-block;
     .ie7-inline-block();
   }
+  .clearfix();
+}
+
+.btn-toolbar-nomargin {
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .btn-toolbar .text {
