--- a/less/variables.less
+++ b/less/variables.less
@@ -123,8 +123,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "../img/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "../img/glyphicons-halflings-white.png";
+@iconSpritePath:          "../../images/bootstrap/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "../../images/bootstrap/glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
@@ -189,13 +189,13 @@
 
 // Default 940px grid
 // -------------------------
-@gridColumns:             12;
-@gridColumnWidth:         60px;
-@gridGutterWidth:         20px;
+@gridColumns:             20;
+@gridColumnWidth:         45px;
+@gridGutterWidth:         5px;
 @gridRowWidth:            (@gridColumns * @gridColumnWidth) + (@gridGutterWidth * (@gridColumns - 1));
 
 
 // Fluid grid
 // -------------------------
 @fluidGridColumnWidth:    6.382978723%;
-@fluidGridGutterWidth:    2.127659574%;
+@fluidGridGutterWidth:    1.127659574%;
