Make buttons with only icons behave correctly inside button group

--- a/less/button-groups.less
+++ b/less/button-groups.less
@@ -178,6 +178,11 @@
   }
 }
 
+.btn-group .btn [class^="icon-"] {
+  margin: 2px 0px;
+  vertical-align: top;
+}
+
 
 // Reposition the caret
 .btn .caret {
