--- a/less/variables.less
+++ b/less/variables.less
@@ -33,7 +33,7 @@
 
 // Scaffolding
 // -------------------------
-@bodyBackground:        @white;
+@bodyBackground:        @grayLight;
 @textColor:             @grayDark;
 
 
@@ -128,8 +128,8 @@
 
 // Sprite icons path
 // -------------------------
-@iconSpritePath:          "../../images/bootstrap/glyphicons-halflings.png";
-@iconWhiteSpritePath:     "../../images/bootstrap/glyphicons-halflings-white.png";
+@iconSpritePath:          "../../Content/images/bootstrap/glyphicons-halflings.png";
+@iconWhiteSpritePath:     "../../Content/images/bootstrap/glyphicons-halflings-white.png";
 
 
 // Input placeholder text color
@@ -195,7 +195,7 @@
 // Default 940px grid
 // -------------------------
 @gridColumns:             20;
-@gridColumnWidth:         45px;
+@gridColumnWidth:         43px;
 @gridGutterWidth:         5px;
 @gridRowWidth:            (@gridColumns * @gridColumnWidth) + (@gridGutterWidth * (@gridColumns - 1));
 
